Adding new feature, Code optimization and Bug fixes

--- a/app/src/main/res/layout/activity_gym_chest.xml
+++ b/app/src/main/res/layout/activity_gym_chest.xml
@@ -12,8 +12,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
-        <GridLayout
 
+        <GridLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:alignmentMode="alignMargins"
@@ -41,7 +41,7 @@
                     <ImageView
                         android:layout_width="80dp"
                         android:layout_height="80dp"
-                        android:src="@drawable/sulyzo"/>/>
+                        android:src="@drawable/sulyzo"/>
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -52,6 +52,7 @@
                         android:textSize="18dp" />
 
                 </LinearLayout>
+
             </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
@@ -85,7 +86,6 @@
                         android:textSize="18dp" />
                 </LinearLayout>
 
-
             </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
@@ -108,7 +108,7 @@
                     <ImageView
                         android:layout_width="80dp"
                         android:layout_height="80dp"
-                        android:src="@drawable/sulyzo"/>/>
+                        android:src="@drawable/sulyzo"/>
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -155,7 +155,7 @@
             </androidx.cardview.widget.CardView>
 
         </GridLayout>
-    </LinearLayout>
 
+    </LinearLayout>
 
 </ScrollView>
