--- a/app/src/main/res/layout/activity_workout_chest.xml
+++ b/app/src/main/res/layout/activity_workout_chest.xml
@@ -14,7 +14,6 @@
         android:orientation="vertical">
 
         <GridLayout
-
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:alignmentMode="alignMargins"
@@ -42,7 +41,7 @@
                     <ImageView
                         android:layout_width="80dp"
                         android:layout_height="80dp"
-                        android:src="@drawable/sulyzo"/>/>
+                        android:src="@drawable/sulyzo"/>
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -53,6 +52,7 @@
                         android:textSize="18dp" />
 
                 </LinearLayout>
+
             </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
@@ -86,7 +86,6 @@
                         android:textSize="18dp" />
                 </LinearLayout>
 
-
             </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
@@ -109,7 +108,7 @@
                     <ImageView
                         android:layout_width="80dp"
                         android:layout_height="80dp"
-                        android:src="@drawable/sulyzo"/>/>
+                        android:src="@drawable/sulyzo"/>
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -142,7 +141,7 @@
                     <ImageView
                         android:layout_width="80dp"
                         android:layout_height="80dp"
-                        android:src="@drawable/sulyzo"/>/>
+                        android:src="@drawable/sulyzo"/>
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -156,7 +155,7 @@
             </androidx.cardview.widget.CardView>
 
         </GridLayout>
-    </LinearLayout>
 
+    </LinearLayout>
 
 </ScrollView>
