--- a/app/src/main/res/anim/down.xml
+++ b/app/src/main/res/anim/down.xml
@@ -2,19 +2,13 @@
 <set xmlns:android="http://schemas.android.com/apk/res/android">
 
     <translate
-
         android:duration="3500"
         android:fromXDelta="0%"
-        android:fromYDelta="100%"
-
-        />
+        android:fromYDelta="100%"/>
 
     <alpha
-
         android:duration="3500"
         android:fromAlpha="0.1"
-        android:toAlpha="1.0"
-
-        />
+        android:toAlpha="1.0"/>
 
 </set>
