--- a/app/src/main/res/layout/dialog_forgot.xml
+++ b/app/src/main/res/layout/dialog_forgot.xml
@@ -1,22 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_margin="20dp"
     android:padding="20dp"
     android:id="@+id/dialogForgot"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-
-
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/dialogBox"
         android:background="@drawable/dialog_background"
-        app:layout_constraintTop_toTopOf="parent"
-        >
+        app:layout_constraintTop_toTopOf="parent">
 
         <TextView
             android:layout_width="match_parent"
@@ -28,8 +24,7 @@
             android:textColor="#FFFFFF"
             android:drawableLeft="@drawable/baseline_lock_reset_24"
             android:drawablePadding="8dp"
-            app:layout_constraintTop_toTopOf="parent"
-            />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/desc"
@@ -58,8 +53,7 @@
             android:maxLines="1"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/forgotTitle"
-            />
+            app:layout_constraintTop_toBottomOf="@id/forgotTitle"/>
 
         <Button
             android:layout_width="0dp"
@@ -76,8 +70,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/emailBox"
             app:layout_constraintBottom_toBottomOf="@id/dialogBox"
-            app:layout_constraintEnd_toStartOf="@+id/btnReset"
-            />
+            app:layout_constraintEnd_toStartOf="@+id/btnReset" />
 
         <Button
             android:layout_width="0dp"
@@ -93,15 +86,8 @@
             android:layout_marginTop="10dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="@id/dialogBox"
-            app:layout_constraintStart_toEndOf="@id/btnCancel"
-            />
-
-
-
-
-
+            app:layout_constraintStart_toEndOf="@id/btnCancel" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
