--- a/app/src/main/res/layout/activity_plan.xml
+++ b/app/src/main/res/layout/activity_plan.xml
@@ -58,8 +58,8 @@
 
                 <ImageView
                     android:layout_width="match_parent"
-                    android:layout_height="205dp"
-                    android:src="@drawable/edzoterem" />
+                    android:layout_height="165dp"
+                    android:src="@drawable/sulyzos_edzesterv" />
 
                 <Button
                     android:id="@+id/btn5DayGym"
@@ -118,11 +118,11 @@
                     android:background="@color/black"/>
 
                 <ImageView
-                    android:layout_width="match_parent"
+                    android:layout_width="410dp"
                     android:layout_height="155dp"
                     android:layout_alignParentStart="true"
                     android:layout_alignParentEnd="true"
-                    android:src="@drawable/sajattestsulyos" />
+                    android:src="@drawable/sajatsulyosedzes" />
 
                 <Button
                     android:id="@+id/btnAllDayWorkout"
