--- a/app/src/main/res/layout/gym_abs1.xml
+++ b/app/src/main/res/layout/gym_abs1.xml
@@ -27,7 +27,7 @@
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="257dp"
-            android:src="@drawable/my_gif" />
+            android:src="@drawable/anatomy2" />
 
         <TextView
             android:layout_width="wrap_content"
